Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 variables:
   uiSource:'src'
-  uiBuild: '$(uisouce)/build'
+  uiBuild: '$(uiSource)/build'
 
 pool:
   vmImage: ubuntu-latest
