--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
     npm install
     npm run build
     popd
-  displayName: 'npm install and build'
+  displayName: 'Build UI'
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(uiBuild)'
