--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,8 @@ trigger:
 - main
 
 variables:
-  uiSource:'src'
-  uiBuild: '$(uiSource)/build'
+  uiSource: "src/ui"
+  uiBuild: "$(uiSource)/build"
 
 pool:
   vmImage: ubuntu-latest
